--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-router-dom": "^6.11.2"
   },
   "devDependencies": {
