--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.15",
+    "@cloudinary/url-gen": "^1.11.2",
     "bootstrap": "^5.3.1",
+    "cloudinary-react": "^1.8.1",
     "graphql": "^16.6.0",
     "happy-dom": "^9.20.3",
     "jwt-decode": "^3.1.2",
