--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "concurrently": "^5.1.0"
   },
   "dependencies": {
-    "bootstrap": "^5.3.1"
+    "bootstrap": "^5.3.1",
+    "react-icons": "^4.11.0"
   }
 }
