--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@apollo/client": "^3.7.15",
     "@cloudinary/url-gen": "^1.11.2",
+    "@esbuild/darwin-arm64": "^0.19.3",
+    "@vitejs/plugin-react": "^4.0.3",
     "bootstrap": "^5.3.1",
     "cloudinary-react": "^1.8.1",
     "graphql": "^16.6.0",
@@ -21,10 +23,10 @@
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-markdown": "^8.0.7",
     "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-router-dom": "^6.11.2",
-    "vite": "^4.4.5",
-    "@vitejs/plugin-react": "^4.0.3"
+    "vite": "^4.4.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
